--- a/socialNetwork/Base.lproj/Main.storyboard
+++ b/socialNetwork/Base.lproj/Main.storyboard
@@ -185,27 +185,31 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8v7-kD-IZF" customClass="FancyView" customModule="socialNetwork" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="65"/>
                                 <subviews>
-                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="sign-out" translatesAutoresizingMaskIntoConstraints="NO" id="ZCw-6f-4eQ">
-                                        <rect key="frame" x="8" y="21" width="48" height="35"/>
-                                        <constraints>
-                                            <constraint firstAttribute="width" constant="48" id="ctV-je-dsU"/>
-                                            <constraint firstAttribute="height" constant="35" id="pHb-dZ-0KO"/>
-                                        </constraints>
-                                    </imageView>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Feed" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dVF-Yd-WR8">
-                                        <rect key="frame" x="159.5" y="23" width="56" height="31.5"/>
+                                        <rect key="frame" x="159.5" y="20.5" width="56" height="31.5"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="26"/>
                                         <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="MGa-j9-9Bf">
+                                        <rect key="frame" x="8" y="19" width="46" height="34"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="46" id="EYu-N2-NnN"/>
+                                            <constraint firstAttribute="height" constant="34" id="N2d-9E-7mB"/>
+                                        </constraints>
+                                        <state key="normal" backgroundImage="sign-out"/>
+                                        <connections>
+                                            <action selector="signOutBtnTapped:" destination="pYq-ID-GQe" eventType="touchUpInside" id="EQR-MH-kNx"/>
+                                        </connections>
+                                    </button>
                                 </subviews>
                                 <color key="backgroundColor" red="0.51083570720000004" green="0.78094726800000003" blue="0.73822617530000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
+                                    <constraint firstItem="dVF-Yd-WR8" firstAttribute="centerY" secondItem="MGa-j9-9Bf" secondAttribute="centerY" id="EG2-X5-HVb"/>
                                     <constraint firstAttribute="height" constant="65" id="Rn0-EQ-tAt"/>
-                                    <constraint firstAttribute="bottom" secondItem="ZCw-6f-4eQ" secondAttribute="bottom" constant="9" id="cnu-TK-pWX"/>
-                                    <constraint firstItem="ZCw-6f-4eQ" firstAttribute="leading" secondItem="8v7-kD-IZF" secondAttribute="leading" constant="8" id="d8E-vg-pfs"/>
+                                    <constraint firstAttribute="bottom" secondItem="MGa-j9-9Bf" secondAttribute="bottom" constant="12" id="eiC-zn-rUl"/>
                                     <constraint firstItem="dVF-Yd-WR8" firstAttribute="centerX" secondItem="8v7-kD-IZF" secondAttribute="centerX" id="t7M-Nr-WqU"/>
-                                    <constraint firstItem="dVF-Yd-WR8" firstAttribute="centerY" secondItem="ZCw-6f-4eQ" secondAttribute="centerY" id="vgc-wW-Zco"/>
+                                    <constraint firstItem="MGa-j9-9Bf" firstAttribute="leading" secondItem="8v7-kD-IZF" secondAttribute="leading" constant="8" id="yYN-NN-Z6r"/>
                                 </constraints>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Kj5-tc-MPk" customClass="FancyView" customModule="socialNetwork" customModuleProvider="target">
@@ -261,7 +265,7 @@
                                             <rect key="frame" x="0.0" y="0.0" width="375" height="415.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <view contentMode="scaleAspectFill" translatesAutoresizingMaskIntoConstraints="NO" id="trt-lR-xzV" customClass="CircleView" customModule="socialNetwork" customModuleProvider="target">
+                                                <view contentMode="scaleAspectFill" translatesAutoresizingMaskIntoConstraints="NO" id="trt-lR-xzV">
                                                     <rect key="frame" x="8" y="8" width="359" height="399.5"/>
                                                     <subviews>
                                                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="bottom" spacing="9" translatesAutoresizingMaskIntoConstraints="NO" id="AFH-hN-Wf9">
@@ -270,7 +274,7 @@
                                                                 <stackView opaque="NO" contentMode="scaleToFill" distribution="equalSpacing" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="F5v-g6-4Jt">
                                                                     <rect key="frame" x="8" y="0.0" width="335" height="60"/>
                                                                     <subviews>
-                                                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="profilepic" translatesAutoresizingMaskIntoConstraints="NO" id="pR1-oc-fmY">
+                                                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="profilepic" translatesAutoresizingMaskIntoConstraints="NO" id="pR1-oc-fmY" customClass="CircleView" customModule="socialNetwork" customModuleProvider="target">
                                                                             <rect key="frame" x="0.0" y="0.0" width="60" height="60"/>
                                                                             <constraints>
                                                                                 <constraint firstAttribute="height" constant="60" id="NKg-lv-ZHc"/>
@@ -289,33 +293,33 @@
                                                                     </subviews>
                                                                 </stackView>
                                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Image" translatesAutoresizingMaskIntoConstraints="NO" id="hB7-pU-PL5">
-                                                                    <rect key="frame" x="0.0" y="69" width="343" height="187"/>
+                                                                    <rect key="frame" x="0.0" y="69" width="343" height="200"/>
                                                                     <constraints>
-                                                                        <constraint firstAttribute="height" constant="187" id="sBU-xM-16p"/>
+                                                                        <constraint firstAttribute="height" constant="200" id="sBU-xM-16p"/>
                                                                     </constraints>
                                                                 </imageView>
                                                                 <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="Vak-cT-KaG">
-                                                                    <rect key="frame" x="0.0" y="265" width="343" height="82"/>
+                                                                    <rect key="frame" x="0.0" y="278" width="343" height="96.5"/>
                                                                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                     <constraints>
-                                                                        <constraint firstAttribute="height" constant="82" id="jgU-mY-vHt"/>
+                                                                        <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="82" id="jgU-mY-vHt"/>
                                                                     </constraints>
-                                                                    <mutableString key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</mutableString>
+                                                                    <string key="text">This is a Super super cool pic. This is a Super super cool pic. This is a Super super cool pic. This is a Super super cool pic. This is a Super super cool pic. This is a Super super cool pic. This is a Super super cool pic. </string>
                                                                     <color key="textColor" red="0.19532179829999999" green="0.491085887" blue="0.66036826370000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                                     <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                                                                 </textView>
                                                                 <stackView opaque="NO" contentMode="scaleToFill" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="1aa-GY-dar">
-                                                                    <rect key="frame" x="260" y="356" width="83" height="27.5"/>
+                                                                    <rect key="frame" x="260" y="383.5" width="83" height="0.0"/>
                                                                     <subviews>
                                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Likes" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8H4-ym-BS9">
-                                                                            <rect key="frame" x="0.0" y="0.0" width="44.5" height="27.5"/>
+                                                                            <rect key="frame" x="0.0" y="0.0" width="44.5" height="0.0"/>
                                                                             <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="20"/>
                                                                             <color key="textColor" red="0.57414853570000002" green="0.57416242360000003" blue="0.57415497299999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                                             <nil key="highlightedColor"/>
                                                                         </label>
                                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="100" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qzM-Nx-Lyy">
-                                                                            <rect key="frame" x="49.5" y="0.0" width="33.5" height="27.5"/>
+                                                                            <rect key="frame" x="49.5" y="0.0" width="33.5" height="0.0"/>
                                                                             <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="20"/>
                                                                             <color key="textColor" red="0.57414853570000002" green="0.57416242360000003" blue="0.57415497299999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                                             <nil key="highlightedColor"/>
@@ -325,16 +329,21 @@
                                                             </subviews>
                                                             <constraints>
                                                                 <constraint firstItem="hB7-pU-PL5" firstAttribute="top" secondItem="F5v-g6-4Jt" secondAttribute="bottom" constant="8" id="2AF-Zh-PyQ"/>
+                                                                <constraint firstItem="1aa-GY-dar" firstAttribute="top" secondItem="Vak-cT-KaG" secondAttribute="bottom" constant="9" id="35H-XY-5W9"/>
+                                                                <constraint firstItem="Vak-cT-KaG" firstAttribute="leading" secondItem="AFH-hN-Wf9" secondAttribute="leading" id="6KY-ft-igU"/>
+                                                                <constraint firstAttribute="trailing" secondItem="Vak-cT-KaG" secondAttribute="trailing" constant="9" id="Bdb-nA-Lyk"/>
                                                                 <constraint firstAttribute="trailing" secondItem="F5v-g6-4Jt" secondAttribute="trailing" constant="8" id="CD9-SH-uBd"/>
                                                                 <constraint firstItem="Vak-cT-KaG" firstAttribute="top" secondItem="hB7-pU-PL5" secondAttribute="bottom" constant="9" id="EFJ-t4-Omw"/>
                                                                 <constraint firstItem="hB7-pU-PL5" firstAttribute="top" secondItem="F5v-g6-4Jt" secondAttribute="bottom" constant="8" id="FAa-IA-uSd"/>
                                                                 <constraint firstItem="F5v-g6-4Jt" firstAttribute="top" secondItem="AFH-hN-Wf9" secondAttribute="top" constant="8" id="Oeh-Zw-xBt"/>
+                                                                <constraint firstAttribute="trailing" secondItem="Vak-cT-KaG" secondAttribute="trailing" id="SFA-yf-kBy"/>
                                                                 <constraint firstItem="1aa-GY-dar" firstAttribute="top" secondItem="Vak-cT-KaG" secondAttribute="bottom" constant="10" id="cuG-lq-hsu"/>
+                                                                <constraint firstItem="Vak-cT-KaG" firstAttribute="leading" secondItem="AFH-hN-Wf9" secondAttribute="leading" id="qRf-5J-kaP"/>
                                                                 <constraint firstItem="F5v-g6-4Jt" firstAttribute="leading" secondItem="AFH-hN-Wf9" secondAttribute="leading" constant="8" id="wdd-bk-OhJ"/>
                                                             </constraints>
                                                         </stackView>
                                                     </subviews>
-                                                    <color key="backgroundColor" red="0.92593987944162437" green="0.92593987944162437" blue="0.92593987944162437" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                    <color key="backgroundColor" red="0.96089784263959388" green="0.96089784263959388" blue="0.96089784263959388" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                     <constraints>
                                                         <constraint firstAttribute="trailing" secondItem="AFH-hN-Wf9" secondAttribute="trailing" constant="8" id="AGU-sA-Bh3"/>
                                                         <constraint firstAttribute="bottom" secondItem="AFH-hN-Wf9" secondAttribute="bottom" constant="8" id="r5z-93-7nQ"/>
@@ -350,6 +359,7 @@
                                                 <constraint firstItem="trt-lR-xzV" firstAttribute="leading" secondItem="Y5J-J0-Vjt" secondAttribute="leading" constant="8" id="wyW-Nr-0XE"/>
                                             </constraints>
                                         </tableViewCellContentView>
+                                        <color key="backgroundColor" red="0.83921568627450982" green="0.83921568627450982" blue="0.83921568627450982" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <connections>
                                             <outlet property="heartImage" destination="kkf-83-tTY" id="sWS-9g-CbP"/>
                                             <outlet property="numLikes" destination="qzM-Nx-Lyy" id="kZi-qn-ImO"/>
